--- a/resources/sass/typography.scss
+++ b/resources/sass/typography.scss
@@ -27,11 +27,11 @@ table {
 }
 
 thead tr {
-    @apply px-6 py-3 text-left text-xs font-medium bg-gray-200 text-gray-500 dark:bg-gray-700 dark:text-gray-200 uppercase tracking-wider;
+    @apply px-6 py-3 text-left text-xs font-medium bg-slate-200 text-slate-500 dark:bg-slate-700 dark:text-slate-200 uppercase tracking-wider;
 }
 
 thead th {
-    @apply px-2 py-3;
+    @apply px-4 py-3;
 }
 
 thead tr a {
@@ -39,11 +39,11 @@ thead tr a {
 }
 
 tbody tr {
-    @apply bg-white dark:bg-gray-500 divide-y divide-gray-200;
+    @apply bg-white dark:bg-slate-900 divide-y dark:divide-slate-800  ;
 }
 
 tbody td {
-    @apply px-2 py-4 border-t whitespace-nowrap text-left text-gray-700 dark:text-gray-300;
+    @apply px-4 py-4 border-t dark:border-t-slate-800 whitespace-nowrap text-left text-slate-700 dark:text-slate-300;
 }
 
 tbody td a {
@@ -51,5 +51,5 @@ tbody td a {
 }
 
 hr {
-    @apply border-t border-gray-300;
+    @apply border-t border-slate-300;
 }
