--- a/resources/sass/components/card.scss
+++ b/resources/sass/components/card.scss
@@ -1,24 +1,24 @@
 .card {
-    @apply bg-white dark:bg-gray-800 dark:text-white shadow rounded-md p-5 my-5;
+    @apply bg-white dark:bg-dark dark:text-white shadow rounded-md p-5 my-5;
 
-    &.card-green {
-        @apply bg-green-400 text-green-100;
+    &.card-success {
+        @apply bg-white dark:bg-success text-green-100;
     }
 
-    &.card-red {
-        @apply bg-red-400 text-red-100;
+    &.card-danger {
+        @apply bg-white dark:bg-danger text-red-100;
     }
 
-    &.card-yellow {
-        @apply bg-yellow-400 text-yellow-600;
+    &.card-warning {
+        @apply bg-white dark:bg-warning text-yellow-600;
     }
 
-    &.card-blue {
-        @apply bg-blue-400 text-blue-100;
+    &.card-info {
+        @apply bg-white dark:bg-info text-blue-100;
     }
 
-    &.card-gray {
-        @apply bg-gray-400 text-gray-100;
+    &.card-dark {
+        @apply bg-white dark:bg-dark text-gray-100;
     }
 
     &.card-indigo {
@@ -31,37 +31,33 @@
 }
 
 .card-title {
-    @apply text-3xl font-bold pl-2 pt-2;
+    @apply text-2xl text-indigo-600 dark:text-indigo-300 font-semibold mb-6;
 }
 
 .card-sub-title {
     @apply text-sm pl-2 pb-2;
 }
 
-.card-demo {
-    @apply card card-indigo my-5 p-5;
-}
-
 .card-footer {
     @apply text-xs p-2 rounded-b-md;
 
     &.card-footer-gray {
-        @apply bg-gray-600 text-white;
+        @apply bg-slate-600 text-white;
     }
 
-    &.card-footer-red {
+    &.card-footer-danger {
         @apply bg-red-600 text-white;
     }
 
-    &.card-footer-yellow {
+    &.card-footer-warning {
         @apply bg-yellow-600 text-white;
     }
 
-    &.card-footer-green {
+    &.card-footer-success {
         @apply bg-green-600 text-white;
     }
 
-    &.card-footer-blue {
+    &.card-footer-info {
         @apply bg-blue-600 text-white;
     }
 
@@ -79,5 +75,5 @@
 }
 
 .central-card {
-    @apply bg-white dark:bg-gray-700 p-10 rounded-lg shadow-lg w-full lg:w-1/2 mx-auto
+    @apply bg-white dark:bg-slate-700 p-10 rounded-lg shadow-lg w-full lg:w-1/2 mx-auto
 }
