--- a/resources/sass/components/button.scss
+++ b/resources/sass/components/button.scss
@@ -1,28 +1,28 @@
 .btn {
-    @apply inline-flex items-center py-2 px-4 border rounded-md shadow-md;
+    @apply inline-flex items-center py-2 px-4 border rounded-2xl shadow-md;
 
-    &.btn-gray {
-        @apply bg-gray-600 hover:bg-gray-500 border-gray-600 text-white;
+    &.btn-primary {
+        @apply bg-indigo-600 hover:bg-indigo-700 cursor-pointer border-indigo-600 text-white;
     }
 
-    &.btn-red {
-        @apply bg-red-600 hover:bg-red-500 border-red-600 text-white;
+    &.btn-danger {
+        @apply bg-red-600 hover:bg-red-700 cursor-pointer border-red-600 text-white;
     }
 
-    &.btn-yellow {
-        @apply bg-yellow-600 hover:bg-yellow-500 border-yellow-600 text-white;
+    &.btn-warning {
+        @apply bg-yellow-600 hover:bg-yellow-700 cursor-pointer border-yellow-600 text-white;
     }
 
-    &.btn-green {
-        @apply bg-green-600 hover:bg-green-500 border-green-600 text-white;
+    &.btn-success {
+        @apply bg-green-600 hover:bg-green-700 cursor-pointer border-green-600 text-white;
     }
 
-    &.btn-blue {
-        @apply bg-blue-600 hover:bg-blue-500 border-blue-600 text-white;
+    &.btn-info {
+        @apply bg-sky-600 hover:bg-sky-700 cursor-pointer border-sky-600 text-white;
     }
 
     &.btn-indigo {
-        @apply bg-indigo-600 hover:bg-indigo-500 border-indigo-600 text-white;
+        @apply bg-indigo-600 hover:bg-indigo-700 border-indigo-600 text-white;
     }
 
     &.btn-purple {
@@ -39,9 +39,9 @@
 }
 
 .btn-sm {
-    @apply inline-flex items-center py-1 px-2 border rounded-md text-sm font-medium;
+    @apply inline-flex items-center py-1 px-2 border rounded-xl text-sm font-medium;
 }
 
 .btn-xs {
-    @apply inline-flex items-center p-0.5 border rounded-sm text-xs;
+    @apply inline-flex items-center p-0.5 border rounded-lg text-xs;
 }
